--- a/prueba.html
+++ b/prueba.html
@@ -18,6 +18,7 @@ background-position: center; /* Centra la imagen de fondo */
 </style>
 </head>
 <body>
-<!-- Contenido opcional de la página --> //Aquí podrás colocar textos, otras imágenes que aparezcan sobre el gif de fondo, etc. Este sector es opcional, debes de tener un poco más de conocimiento como desarrollador.
+<!-- Contenido opcional de la página --> 
+<!-- Aquí podrás colocar textos, otras imágenes que aparezcan sobre el gif de fondo, etc. Este sector es opcional, debes de tener un poco más de conocimiento como desarrollador. -->
 </body>
 </html>
